# qietr

./: .gitignore  .mcp.json  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  SESSION_STATE.md  render.yaml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  integration.yml  publish-sdk.yml
docs/: README.md  token-overview.md  token-supply.md  token-utility.md
docs/dev/: 01-PRD.md  02-TRD.md  03-backend-schema.md  04-user-workflows.md  05-uiux.md  06-tokenomics.md  07-brand.md  08-security-risks.md  09-roadmap.md  10-deployment.md  11-trusted-setup.md  12-cross-chain.md  13-agent-ecosystem.md  AUDIT-2026-06-13.md  AUDIT_SCOPE.md  CEREMONY.md  HOSTED_DEPLOY_AUDIT.md  PRIVACY.md  REPO_METADATA.md
docs/getting-started/: HOSTED_DEPLOY.md  LOCAL_SETUP.md  how-to-use.md  what-is-qietr.md
qietr-attestor/: package-lock.json  package.json
qietr-attestor/src/: attestor.ts  chain.ts  index.ts  relayer.ts  watcher.ts
qietr-attestor/test/: chain.test.ts  relayer.test.ts
qietr-circuits/: .gitignore  README.md  package-lock.json  package.json
qietr-circuits/circuits/: qietr_payment.circom
qietr-circuits/scripts/: compile.sh  export-vk.sh  setup-dev.sh  vk-to-rust.js
qietr-circuits/test/: qietr_payment.test.js
qietr-escrow/: Anchor.toml  Cargo.toml  README.md
qietr-escrow/programs/qietr_escrow/: Cargo.toml
qietr-escrow/programs/qietr_escrow/src/: lib.rs
qietr-indexer/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  serve.mjs
qietr-indexer/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
qietr-indexer/db/: schema.sql
qietr-indexer/geyser-plugin/: Cargo.toml  README.md
qietr-indexer/geyser-plugin/src/: decode.rs  lib.rs  writer.rs
qietr-indexer/poller/: .env.example  Dockerfile  README.md  package-lock.json  package.json
qietr-launch/: package-lock.json  package.json
qietr-launch/src/: Launch.tsx  Root.tsx  primitives.tsx  scenes.tsx  scenes2.tsx  theme.ts
qietr-msg/: Anchor.toml  Cargo.toml  README.md
qietr-msg/programs/qietr_msg/: Cargo.toml
qietr-msg/programs/qietr_msg/src/: lib.rs
qietr-pool/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
qietr-pool/programs/qietr_pool/: Cargo.toml
qietr-pool/programs/qietr_pool/src/: dev_vk.rs  errors.rs  lib.rs  merkle.rs  state.rs  verifier.rs
qietr-pool/scripts/: denom-detail.mjs  devnet-e2e-agent.mts  devnet-e2e.mts  devnet-newuser-deposit.mts  devnet-smoke.mjs  devnet-state.mjs  init-denoms-devnet.mts  rpc-proxy.cjs
qietr-pool/tests/: README.md  helpers.ts  qietr-pool.ts
qietr-relayer/: .env.example  .gitignore  README.md  package-lock.json  package.json
qietr-relayer/data/: sanctions.example.txt
qietr-relayer/src/: config.ts  index.ts  kora.ts  tx-validation.ts
qietr-relayer/test/: auth.test.ts  money-path.test.ts
qietr-sdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
qietr-sdk/scripts/: devnet-deposit.mjs  poseidon-vectors.mjs
qietr-sdk/src/: ambient.d.ts  attestor-client.ts  chain.ts  errors.ts  escrow.ts  hash.ts  helpers.ts  index.ts  indexer-client.ts  logger.ts  merkle.ts  msg.ts  note.ts  program.ts  prover.ts  pubkey.ts  randomness.ts  relayer-client.ts  sdk.ts  types.ts  x402.ts
qietr-sdk/test/: chain.test.mjs  edge-cases.test.mjs  (+11 more)
qietr-web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+70 files in other folders)
