[package]
name = "qietr_escrow"
version = "0.1.0-alpha"
authors = ["Qietr Protocol"]
description = "Qietr agent commerce escrow program"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "qietr_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
