[package]
name = "qietr_pool"
version = "0.1.0-alpha"
authors = ["Qietr Protocol"]
description = "Qietr shielded pool program"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "qietr_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
groth16-solana = "0.2.0"
solana-poseidon = "2"
light-poseidon = "0.2.0"
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
